<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">NotiSync</string>

    <!-- wizard -->
    <string name="wizard_previous">Previous</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_finish">Finish</string>
    <string name="wizard_welcome_title">Welcome to NotiSync!</string>
    <string name="wizard_welcome_content">Let\'s get started!</string>
    <string name="wizard_mode_title">What device is this?</string>
    <string name="wizard_mode_primary_title">Primary</string>
    <string name="wizard_mode_primary_description">This is your main phone or tablet. It will forward notifications to your other devices</string>
    <string name="wizard_mode_secondary_title">Secondary</string>
    <string name="wizard_mode_secondary_description">This phone or tablet will receive notifications from the primary device</string>
    <string name="wizard_devices_title">Select your other devices</string>
    <string name="wizard_devices_not_listed">Device not listed?</string>
    <string name="wizard_accessibility_title">Accessibility service</string>
    <string name="wizard_accessibility_content">In order for the Gtalk profile and your own custom profiles to work, NotiSync needs to be enabled as an Accessibility Service.</string>
    <string name="wizard_accessibility_enable">Enable now</string>
    <string name="wizard_accessibility_enabled">Enabled!</string>
    <string name="wizard_customprofiles_title">Custom profiles</string>
    <string name="wizard_customprofiles_content">Creating a custom profile will allow you to forward notifications from any app. Some definitions and stuff go here (or another page)</string>
    <string name="wizard_bluetoothissue_title">Bluetooth issue</string>
    <string name="wizard_bluetoothissue_content">It appears that you are running Android %s. There is a known Bluetooth bug that may occasionally prevent your devices connecting, but this can be fixed by restarting Bluetooth. Would you like to schedule NotiSync to do this automatically?</string>
    <string name="wizard_bluetoothissue_button">Schedule fix</string>
    <string name="wizard_done_title">You\'re all set!</string>
    <string name="wizard_done_content">Done!</string>

    <!-- accessibility -->
    <string name="accessibility_service_description">Description of how awesome this service is.</string>

    <!-- notifications -->
    <string name="noti_connected_to">Connected to %s</string>
    <string name="noti_not_connected">Not connected</string>
    <string name="noti_bt_not_enabled">Bluetooth is not enabled</string>
    <string name="noti_action_connect">Connect</string>
    <string name="noti_action_enable_bt">Enable</string>
    <string name="noti_title_incoming_call">Incoming call</string>
    <string name="noti_title_missed_call">Missed call</string>

    <!-- main activity -->
    <string name="pager_title_standard">Standard</string>
    <string name="pager_title_custom">Custom</string>
    <string name="pager_title_third_party">Third Party</string>

    <!-- standard fragment -->
    <string name="profile_text_messages">Text messages</string>
    <string name="profile_phone_calls">Phone calls</string>
    <string name="profile_gtalk">Gtalk</string>

    <!-- custom fragment -->
    <string name="add_custom_profile">Add custom profile</string>

    <!-- main croutons/toasts/popups -->
    <string name="profile_saved">Profile saved</string>
    <string name="profile_discarded">Changes discarded</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="undo">Undo</string>
    
    <!-- standard profile -->
    <string name="standard_profile_empty">This profile doesn\'t have any options</string>

    <!-- custom profile -->
    <string name="custom_profile_header_name">Name</string>
    <string name="custom_profile_header_tag">Tag</string>
    <string name="custom_profile_header_package">Package</string>
    <string name="custom_profile_header_conditions">Conditions</string>
    <string name="custom_profile_header_ringtone">Ringtone</string>
    <string name="custom_profile_header_extras">Extras</string>
    <string name="custom_profile_label_unconnected_only">Unconnected only</string>
    <string name="custom_profile_label_vibrate">Vibrate</string>
    <string name="custom_profile_label_lights">Flash LED</string>

    <!-- custom profile croutons & errors -->
    <string name="custom_profile_fix_errors">Please fix the errors below and try again.</string>
    <string name="custom_profile_error">An error has occurred</string>
    <string name="custom_profile_invalid_empty">Field must not be empty</string>
    <string name="custom_profile_invalid_unique">Field must be unique</string>

    <!-- package picker -->
    <string name="package_picker_title">Pick an application</string>
    <string name="package_picker_cancel">Cancel</string>
    <string name="package_picker_icon_description">App Icon</string>

    <!-- menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_wizard">Wizard</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_accessibility">Enable accessibility service</string>
    <string name="menu_configure_bluetooth">Configure bluetooth</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_delete">Delete</string>

    <!-- prefence headers -->
    <string name="preference_header_devices">Manage devices</string>
    <string name="preference_header_general">General settings</string>
    <string name="preference_header_bluetooth_fix">Bluetooth fix</string>

    <!-- preferences -->
    <string name="settings_title">Settings</string>
    <string name="preference_general_start_on_boot">Start on boot</string>
    <string name="preference_general_mode_title">Mode</string>
    <string name="preference_general_mode_summary">Should this device send notifications (primary) or receive notifications (secondary)?</string>
    <string name="preference_general_analytics_title">Improve NotiSync</string>
    <string name="preference_general_analytics_summary">Help improve NotiSync by sending anonymous usage data</string>
    <string name="preference_bluetooth_fix_enabled">Enable Bluetooth fix</string>
    <string name="preference_bluetooth_fix_time">Time to run</string>

</resources>